# kuams3

./: CMakeLists.txt  README.md  package.xml
docs/: 99-mecanumrover3-serial.rules
kuams3/: CMakeLists.txt  package.xml
kuams3_bringup/: CMakeLists.txt  package.xml
kuams3_bringup/config/: MID360_config.json  config_pub_odom.yaml
kuams3_bringup/launch/: kuams3.launch.py  kuams3_test.launch.py  rviz.launch.py
kuams3_bringup/launch/utils/: sensors.launch.py
kuams3_bringup/rviz/: kuams3.rviz
kuams3_bringup/src/: pub_odom.cpp
kuams3_description/: CMakeLists.txt  package.xml
kuams3_description/launch/: display.launch.py
kuams3_description/rviz/: dark.qss  display.rviz
kuams3_description/urdf/: kuams3.xacro  materials.xacro
kuams3_navigation/: CMakeLists.txt  package.xml
kuams3_navigation/config/: kuams3_nav2_3d_params.yaml
kuams3_navigation/launch/: kuams3_3d_navigation.launch.py
kuams3_navigation/launch/utils/: bringup_launch.py  localization_launch.py  navigation_launch.py
kuams3_navigation/rviz/: 3d_nav2_view.rviz
kuams3_teleop/: CMakeLists.txt  package.xml
kuams3_teleop/config/: config_kuams3_teleop.yaml
kuams3_teleop/launch/: kuams3_teleop.launch.py
kuams3_teleop/src/: kuams3_teleop.cpp
