<?xml version="1.0"?>
<package format="3">
  <name>kuams3</name>
  <version>0.0.1</version>
  <description>KUAMS3 Meta Package</description>
  <maintainer email="kazulab10969@outlook.jp">kazuma yagi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kuams3_bringup</exec_depend>
  <exec_depend>kuams3_description</exec_depend>
  <exec_depend>kuams3_navigation</exec_depend>
  <exec_depend>kuams3_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>