<?xml version="1.0"?>
<package format="3">
  <name>kuams3_teleop</name>
  <version>0.0.0</version>
  <description>Teleoperation for kuams3 using a joystick.</description>
  <maintainer email="kazulab10969@outlook.jp">Kazuma Yagi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
